--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.google.guava:guava:16.0'
     compile group: 'net.sourceforge.tess4j', name: 'tess4j', version: '4.0.0'
     compile 'com.google.apis:google-api-services-translate:v2-rev51-1.25.0'
+    compile 'com.google.cloud:google-cloud-vision:1.48.0'
     testCompile 'junit:junit:4.12'
 
 }
