--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,57 @@
 buildscript {
-    ext.kotlin_version = '1.2.71'
+
+    ext {
+        kotlinVersion = '1.3.0'
+        springBootVersion = '2.0.2.RELEASE'
+    }
 
     repositories {
         mavenCentral()
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
     }
+
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
 }
 
 apply plugin: 'kotlin'
 
-sourceSets {
-    main.java.srcDirs += 'src'
-    test.java.srcDirs += 'test'
+group = 'com.eiserner.stegmystery'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
+
+compileKotlin {
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = "1.8"
+    }
 }
 
 repositories {
+    maven {
+        url 'https://repo.gradle.org/gradle/plugins-releases'
+    }
     mavenCentral()
     jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.google.guava:guava:16.0'
-    compile 'com.google.apis:google-api-services-translate:v2-rev51-1.25.0'
-    compile 'com.github.kittinunf.fuel:fuel:1.15.0'
-    compile 'com.google.cloud:google-cloud-vision:1.48.0'
+    compile group: 'net.sourceforge.tess4j', name: 'tess4j', version: '3.2.1'
+    compile 'javax.media.jai:com.springsource.javax.media.jai.core:1.1.3'
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    compile("org.jetbrains.kotlin:kotlin-reflect")
     testCompile 'junit:junit:4.12'
 }
