--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,35 @@
 buildscript {
-
-    ext {
-        kotlinVersion = '1.3.0'
-        springBootVersion = '2.0.2.RELEASE'
-    }
-
+    ext.kotlin_version = '1.3.10'
     repositories {
         mavenCentral()
     }
-
     dependencies {
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
-
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
-group = 'com.eiserner.stegmystery'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+mainClassName = 'demo.AppKt'
 
-compileKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
-}
+defaultTasks 'run'
 
 repositories {
-    maven {
-        url 'https://repo.gradle.org/gradle/plugins-releases'
-    }
     mavenCentral()
     jcenter()
 }
 
 dependencies {
-    compile group: 'net.sourceforge.tess4j', name: 'tess4j', version: '3.2.1'
-    compile 'javax.media.jai:com.springsource.javax.media.jai.core:1.1.3'
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    compile("org.jetbrains.kotlin:kotlin-reflect")
-    testCompile 'junit:junit:4.12'
+
+    compile group: 'khttp', name: 'khttp', version: '0.1.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testCompile("junit:junit:4.12")
+    testRuntime("org.junit.vintage:junit-vintage-engine:5.3.1")
+}
+
+jar {
+    manifest { attributes 'Main-Class': 'AppKt' }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
